@@ -15,7 +15,7 @@ describe 'scenario' do
       context %(for #{scenario_name}) do
         let(:input) { IO.read input_filename, mode: 'r:UTF-8', newline: :universal }
         let(:extra_options) { options }
-        let(:expected) { IO.read output_filename, mode: 'r:UTF-8', newline: :universal }
+        let(:expected) { (IO.read output_filename, mode: 'r:UTF-8', newline: :universal).chomp }
         it 'converts Markdown to AsciiDoc' do
           (expect doc.to_asciidoc).to eql expected
         end
